# genshin_auto_login

./: .gitignore  README.md  pyproject.toml
src/mihoyo_auto_login/: main.py
